--- a/biome.json
+++ b/biome.json
@@ -21,7 +21,8 @@
 			},
 			"suspicious": {
 				"noArrayIndexKey": "off",
-				"noDocumentCookie": "off"
+				"noDocumentCookie": "off",
+				"noUnknownAtRules": "off"
 			}
 		}
 	},
