--- a/package.json
+++ b/package.json
@@ -1,69 +1,74 @@
 {
-	"name": "valor-seguro",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build",
-		"start": "next start",
-		"lint": "biome lint --write --no-errors-on-unmatched",
-		"format": "biome format --write --no-errors-on-unmatched"
-	},
-	"dependencies": {
-		"@biomejs/biome": "^2.2.2",
-		"@hookform/resolvers": "^5.0.1",
-		"@radix-ui/react-accordion": "^1.2.10",
-		"@radix-ui/react-alert-dialog": "^1.1.13",
-		"@radix-ui/react-dialog": "^1.1.13",
-		"@radix-ui/react-dropdown-menu": "^2.1.14",
-		"@radix-ui/react-icons": "^1.3.2",
-		"@radix-ui/react-label": "^2.1.6",
-		"@radix-ui/react-popover": "^1.1.13",
-		"@radix-ui/react-scroll-area": "^1.2.8",
-		"@radix-ui/react-select": "^2.2.4",
-		"@radix-ui/react-separator": "^1.1.6",
-		"@radix-ui/react-slot": "^1.2.2",
-		"@radix-ui/react-switch": "^1.2.4",
-		"@radix-ui/react-tabs": "^1.1.11",
-		"@radix-ui/react-tooltip": "^1.2.6",
-		"@supabase/ssr": "^0.6.1",
-		"@supabase/supabase-js": "^2.49.4",
-		"@tanstack/react-query": "^5.76.1",
-		"@tanstack/react-table": "^8.21.3",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"date-fns": "^4.1.0",
-		"lucide-react": "^0.509.0",
-		"motion": "^12.11.3",
-		"next": "15.3.2",
-		"next-themes": "^0.4.6",
-		"react": "^19.1.0",
-		"react-aria": "^3.39.0",
-		"react-day-picker": "8.10.1",
-		"react-dom": "^19.1.0",
-		"react-hook-form": "^7.56.3",
-		"react-resizable-panels": "^3.0.2",
-		"recharts": "^2.15.3",
-		"sonner": "^2.0.3",
-		"supabase": "^2.22.12",
-		"tailwind-merge": "^3.3.0",
-		"vaul": "^1.1.2",
-		"zod": "^3.24.4",
-		"zustand": "^5.0.4"
-	},
-	"devDependencies": {
-		"@eslint/eslintrc": "^3.3.1",
-		"@tailwindcss/postcss": "^4.1.6",
-		"@types/node": "^20.17.47",
-		"@types/react": "^19.1.4",
-		"@types/react-dom": "^19.1.5",
-		"eslint": "^9.26.0",
-		"eslint-config-next": "15.3.2",
-		"tailwindcss": "^4.1.6",
-		"tw-animate-css": "^1.2.9",
-		"typescript": "^5.8.3"
-	},
-	"overrides": {
-		"react-is": "^19.0.0-rc-69d4b800-20241021"
-	}
+  "name": "valor-seguro",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "biome lint --write --no-errors-on-unmatched",
+    "format": "biome format --write --no-errors-on-unmatched",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+  },
+  "dependencies": {
+    "@biomejs/biome": "^2.2.6",
+    "@hookform/resolvers": "^5.2.2",
+    "@opennextjs/cloudflare": "^1.11.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.76.0",
+    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-table": "^8.21.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.509.0",
+    "motion": "^12.23.24",
+    "next": "15.3.2",
+    "next-themes": "^0.4.6",
+    "react": "^19.2.0",
+    "react-aria": "^3.44.0",
+    "react-day-picker": "8.10.1",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.65.0",
+    "react-resizable-panels": "^3.0.6",
+    "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
+    "supabase": "^2.51.0",
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.15",
+    "@types/node": "^20.19.22",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "15.3.2",
+    "tailwindcss": "^4.1.15",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
+    "wrangler": "^4.43.0"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
+  }
 }
